--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,15 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900');
+@import url('font.css');
+@import url('font-awesome.css');
+
 // Import base styles
 @import "./base/variables";
 @import "./base/mixins";
-@import "./base/placeholders";
 @import "./base/global";
 
 // Import components styles
 @import "./components/components";
+@import "./components/slider";
+@import "./components/product-grid";
+@import "./components/title";
+@import "./components/product-new";
 
 // Import layouts styles
 @import "./layouts/header";
 @import "./layouts/footer";
-
+@import "./layouts/topbar";
+@import "./layouts/navbar";
+@import "./layouts/banner";
 // Import pages styles
 @import "./pages/index";
+
+@import "./pages/pageHome/feature";
+@import "./pages/pageHome/sale";
+@import "./pages/pageHome/blog";
