--- a/src/pug/base/base.pug
+++ b/src/pug/base/base.pug
@@ -1,12 +1,16 @@
+include ./mixin.pug
 doctype html
 html(lang="en")
   head
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0")
-    title Pug-Sass Starter
+    block title
+      +title('Green Shop')
     // Styles
     link(href="./assets/css/styles.min.css", rel="stylesheet")
+    link(rel='stylesheet' href='https://use.fontawesome.com/releases/v5.8.2/css/all.css')
+
   body
     block layout
     // Scripts
