--- a/src/pug/layouts/default-layout.pug
+++ b/src/pug/layouts/default-layout.pug
@@ -1,6 +1,8 @@
 extends ../base/base.pug
+block title
 block layout
-  .app
-    include ../partials/header.pug
-    block content
-    include ../partials/footer.pug
+  include ../partials/topbar.pug
+  include ../partials/header.pug
+  include ../partials/navbar.pug
+  block content
+  include ../partials/footer.pug
