--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -17,6 +17,7 @@
 @import "./components/breadcrumb";
 @import "./components/pagination";
 @import "./components/catalog";
+@import "./components/button";
 
 // Import layouts styles
 @import "./layouts/header";
@@ -34,3 +35,5 @@
 
 //PageGrid
 @import "./pages/pageGrid/pageGrid";
+//PageList
+@import "./pages/pageList/pageList";
