--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -18,6 +18,9 @@
 @import "./components/pagination";
 @import "./components/catalog";
 @import "./components/button";
+@import "./components/related";
+@import "./components/quantity";
+@import "./components/tab";
 
 // Import layouts styles
 @import "./layouts/header";
@@ -37,3 +40,5 @@
 @import "./pages/pageGrid/pageGrid";
 //PageList
 @import "./pages/pageList/pageList";
+//PageDetails
+@import "./pages/pageDetails/pageDetails";
