--- a/src/sass/components/_title.scss
+++ b/src/sass/components/_title.scss
@@ -25,4 +25,11 @@
             
         }
     }
+    &__head {
+        font-size: 18px;
+        font-weight: 700;
+        color: $cl_m;
+        margin-bottom: 70px;
+        text-transform: uppercase;
+    }
 }
