--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -42,3 +42,5 @@
 @import "./pages/pageList/pageList";
 //PageDetails
 @import "./pages/pageDetails/pageDetails";
+//PageCart
+@import "./pages/PageCart/pageCart";
