--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -21,6 +21,8 @@
 @import "./components/related";
 @import "./components/quantity";
 @import "./components/tab";
+@import "./components/category";
+
 
 // Import layouts styles
 @import "./layouts/header";
@@ -44,3 +46,5 @@
 @import "./pages/pageDetails/pageDetails";
 //PageCart
 @import "./pages/PageCart/pageCart";
+//PageBlog
+@import "./pages/pageBlog/pageBlog";
